[package]
name = "flumberboozle"
version = "0.1.0"
edition = "2021"

[dependencies]
balls
DEEZ UNUST
ghghghh NA;;S
ghghhhghh
jhjj
 SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA SIGMAAAAAAAAAAAAA
 SIGMAAAAAAAAAAAAAC'EST LA VIE SKIBIDI
haloooooooooooo ;3
